PROJECT(Module_osg_MetaLibrary)
SET(PATH_TO_OSG_LIBRARY   "D:/SRC/OpenSceneGraph-3.2/lib/osg.lib")
ADD_DEFINITIONS(-DMETALIBRARY_osg_LIBRARY)
set(PATHTOHEADER ${PROJECT_SOURCE_DIR}/../src/ )
	INCLUDE_directories(${PATHTOHEADER})
			SET(SOURCES_CPP 
osg_MetaLib.cpp
osg_AlphaFunc.cpp
osg_AnimationPath.cpp
osg_AnimationPathCallback.cpp
osg_ApplicationUsage.cpp
osg_ApplicationUsageProxy.cpp
osg_ArgumentParser.cpp
osg_Array.cpp
osg_ArrayDispatchers.cpp
osg_ArrayVisitor.cpp
osg_AtomicCounterBufferBinding.cpp
osg_AtomicCounterBufferObject.cpp
osg_AttributeDispatch.cpp
osg_AudioSink.cpp
osg_AudioStream.cpp
osg_AutoTransform.cpp
osg_BarrierOperation.cpp
osg_Billboard.cpp
osg_BlendColor.cpp
osg_BlendEquation.cpp
osg_BlendFunc.cpp
osg_BlockAndFlushOperation.cpp
osg_Box.cpp
osg_BufferData.cpp
osg_BufferIndexBinding.cpp
osg_BufferObject.cpp
osg_BufferObjectProfile.cpp
osg_Camera.cpp
osg_CameraView.cpp
osg_Capsule.cpp
osg_ClampColor.cpp
osg_ClampedLinearCostFunction1D.cpp
osg_ClearNode.cpp
osg_ClipNode.cpp
osg_ClipPlane.cpp
osg_ClusterCullingCallback.cpp
osg_CollectOccludersVisitor.cpp
osg_ColorMask.cpp
osg_ColorMatrix.cpp
osg_CompositeShape.cpp
osg_ComputeBoundsVisitor.cpp
osg_Cone.cpp
osg_ConstArrayVisitor.cpp
osg_ConstShapeVisitor.cpp
osg_ConstValueVisitor.cpp
osg_ConvexHull.cpp
osg_ConvexPlanarOccluder.cpp
osg_ConvexPlanarPolygon.cpp
osg_CoordinateSystemNode.cpp
osg_CopyOp.cpp
osg_CullFace.cpp
osg_CullSettings.cpp
osg_CullStack.cpp
osg_CullingSet.cpp
osg_Cylinder.cpp
osg_DefaultUserDataContainer.cpp
osg_DeleteHandler.cpp
osg_Depth.cpp
osg_DisplaySettings.cpp
osg_DrawArrayLengths.cpp
osg_DrawArrays.cpp
osg_DrawElements.cpp
osg_DrawElementsUByte.cpp
osg_DrawElementsUInt.cpp
osg_DrawElementsUShort.cpp
osg_DrawPixels.cpp
osg_Drawable.cpp
osg_ElapsedTime.cpp
osg_ElementBufferObject.cpp
osg_EllipsoidModel.cpp
osg_EndOfDynamicDrawBlock.cpp
osg_FBOExtensions.cpp
osg_FlushDeletedGLObjectsOperation.cpp
osg_Fog.cpp
osg_FragmentProgram.cpp
osg_FrameBufferAttachment.cpp
osg_FrameBufferObject.cpp
osg_FrameStamp.cpp
osg_FrontFace.cpp
osg_GL2Extensions.cpp
osg_GLBeginEndAdapter.cpp
osg_GLBufferObject.cpp
osg_GLBufferObjectManager.cpp
osg_GLBufferObjectSet.cpp
osg_Geode.cpp
osg_Geometry.cpp
osg_GeometryCostEstimator.cpp
osg_GraphicsContext.cpp
osg_GraphicsCostEstimator.cpp
osg_GraphicsOperation.cpp
osg_GraphicsThread.cpp
osg_Group.cpp
osg_HeightField.cpp
osg_Hint.cpp
osg_Image.cpp
osg_ImageSequence.cpp
osg_ImageStream.cpp
osg_IndexArray.cpp
osg_InfinitePlane.cpp
osg_KdTree.cpp
osg_KdTreeBuilder.cpp
osg_LOD.cpp
osg_Light.cpp
osg_LightModel.cpp
osg_LightSource.cpp
osg_LineSegment.cpp
osg_LineStipple.cpp
osg_LineWidth.cpp
osg_LogicOp.cpp
osg_Material.cpp
osg_MatrixTransform.cpp
osg_Matrixd.cpp
osg_Matrixf.cpp
osg_Multisample.cpp
osg_Node.cpp
osg_NodeAcceptOp.cpp
osg_NodeCallback.cpp
osg_NodeTrackerCallback.cpp
osg_NodeVisitor.cpp
osg_NotifyHandler.cpp
osg_Object.cpp
osg_Observer.cpp
osg_ObserverNodePath.cpp
osg_ObserverSet.cpp
osg_OccluderNode.cpp
osg_OcclusionQueryNode.cpp
osg_Operation.cpp
osg_OperationQueue.cpp
osg_OperationThread.cpp
osg_PagedLOD.cpp
osg_PatchParameter.cpp
osg_PixelBufferObject.cpp
osg_PixelDataBufferObject.cpp
osg_PixelStorageModes.cpp
osg_Plane.cpp
osg_Point.cpp
osg_PointSprite.cpp
osg_PolygonMode.cpp
osg_PolygonOffset.cpp
osg_PolygonStipple.cpp
osg_Polytope.cpp
osg_PositionAttitudeTransform.cpp
osg_PrimitiveFunctor.cpp
osg_PrimitiveIndexFunctor.cpp
osg_PrimitiveRestartIndex.cpp
osg_PrimitiveSet.cpp
osg_Program.cpp
osg_ProgramCostEstimator.cpp
osg_Projection.cpp
osg_ProxyNode.cpp
osg_Quat.cpp
osg_QueryGeometry.cpp
osg_RefBlock.cpp
osg_RefBlockCount.cpp
osg_RefMatrixd.cpp
osg_RefMatrixf.cpp
osg_Referenced.cpp
osg_ReleaseContext_Block_MakeCurrentOperation.cpp
osg_RenderBuffer.cpp
osg_RenderInfo.cpp
osg_RunOperations.cpp
osg_SampleMaski.cpp
osg_Scissor.cpp
#osg_Script.cpp
#osg_ScriptCallback.cpp
#osg_ScriptEngine.cpp
osg_Sequence.cpp
osg_ShadeModel.cpp
osg_Shader.cpp
osg_ShaderAttribute.cpp
osg_ShaderBinary.cpp
osg_ShaderComponent.cpp
osg_ShaderComposer.cpp
osg_ShadowVolumeOccluder.cpp
osg_Shape.cpp
osg_ShapeDrawable.cpp
osg_ShapeVisitor.cpp
osg_Sphere.cpp
osg_StandardNotifyHandler.cpp
osg_State.cpp
osg_StateAttribute.cpp
osg_StateAttributeCallback.cpp
osg_StateSet.cpp
osg_Stats.cpp
osg_Stencil.cpp
osg_StencilTwoSided.cpp
osg_SwapBuffersOperation.cpp
osg_Switch.cpp
osg_TessellationHints.cpp
osg_TestResult.cpp
osg_TexEnv.cpp
osg_TexEnvCombine.cpp
osg_TexEnvFilter.cpp
osg_TexGen.cpp
osg_TexGenNode.cpp
osg_TexMat.cpp
osg_Texture.cpp
osg_Texture1D.cpp
osg_Texture2D.cpp
osg_Texture2DArray.cpp
osg_Texture2DMultisample.cpp
osg_Texture3D.cpp
osg_TextureBuffer.cpp
osg_TextureCostEstimator.cpp
osg_TextureCubeMap.cpp
osg_TextureRectangle.cpp
osg_Timer.cpp
osg_TransferFunction.cpp
osg_TransferFunction1D.cpp
osg_Transform.cpp
osg_TransformFeedbackBufferBinding.cpp
osg_TriangleMesh.cpp
osg_Uniform.cpp
osg_UniformBufferBinding.cpp
osg_UniformBufferObject.cpp
osg_UserDataContainer.cpp
osg_ValueObject.cpp
osg_ValueVisitor.cpp
osg_Vec2b.cpp
osg_Vec2d.cpp
osg_Vec2f.cpp
osg_Vec2i.cpp
osg_Vec2s.cpp
osg_Vec2ub.cpp
osg_Vec2ui.cpp
osg_Vec2us.cpp
osg_Vec3b.cpp
osg_Vec3d.cpp
osg_Vec3f.cpp
osg_Vec3i.cpp
osg_Vec3s.cpp
osg_Vec3ub.cpp
osg_Vec3ui.cpp
osg_Vec3us.cpp
osg_Vec4b.cpp
osg_Vec4d.cpp
osg_Vec4f.cpp
osg_Vec4i.cpp
osg_Vec4s.cpp
osg_Vec4ub.cpp
osg_Vec4ui.cpp
osg_Vec4us.cpp
osg_VertexAttribAlias.cpp
osg_VertexBufferObject.cpp
osg_VertexProgram.cpp
osg_View.cpp
osg_Viewport.cpp
#osg_WinDebugNotifyHandler.cpp
	)
	SET(PROJECT_INCLUDES
osg_MetaLib.hpp
osg_AlphaFunc.hpp
osg_AnimationPath.hpp
osg_AnimationPathCallback.hpp
osg_ApplicationUsage.hpp
osg_ApplicationUsageProxy.hpp
osg_ArgumentParser.hpp
osg_Array.hpp
osg_ArrayDispatchers.hpp
osg_ArrayVisitor.hpp
osg_AtomicCounterBufferBinding.hpp
osg_AtomicCounterBufferObject.hpp
osg_AttributeDispatch.hpp
osg_AudioSink.hpp
osg_AudioStream.hpp
osg_AutoTransform.hpp
osg_BarrierOperation.hpp
osg_Billboard.hpp
osg_BlendColor.hpp
osg_BlendEquation.hpp
osg_BlendFunc.hpp
osg_BlockAndFlushOperation.hpp
osg_Box.hpp
osg_BufferData.hpp
osg_BufferIndexBinding.hpp
osg_BufferObject.hpp
osg_BufferObjectProfile.hpp
osg_Camera.hpp
osg_CameraView.hpp
osg_Capsule.hpp
osg_ClampColor.hpp
osg_ClampedLinearCostFunction1D.hpp
osg_ClearNode.hpp
osg_ClipNode.hpp
osg_ClipPlane.hpp
osg_ClusterCullingCallback.hpp
osg_CollectOccludersVisitor.hpp
osg_ColorMask.hpp
osg_ColorMatrix.hpp
osg_CompositeShape.hpp
osg_ComputeBoundsVisitor.hpp
osg_Cone.hpp
osg_ConstArrayVisitor.hpp
osg_ConstShapeVisitor.hpp
osg_ConstValueVisitor.hpp
osg_ConvexHull.hpp
osg_ConvexPlanarOccluder.hpp
osg_ConvexPlanarPolygon.hpp
osg_CoordinateSystemNode.hpp
osg_CopyOp.hpp
osg_CullFace.hpp
osg_CullSettings.hpp
osg_CullStack.hpp
osg_CullingSet.hpp
osg_Cylinder.hpp
osg_DefaultUserDataContainer.hpp
osg_DeleteHandler.hpp
osg_Depth.hpp
osg_DisplaySettings.hpp
osg_DrawArrayLengths.hpp
osg_DrawArrays.hpp
osg_DrawElements.hpp
osg_DrawElementsUByte.hpp
osg_DrawElementsUInt.hpp
osg_DrawElementsUShort.hpp
osg_DrawPixels.hpp
osg_Drawable.hpp
osg_ElapsedTime.hpp
osg_ElementBufferObject.hpp
osg_EllipsoidModel.hpp
osg_EndOfDynamicDrawBlock.hpp
osg_FBOExtensions.hpp
osg_FlushDeletedGLObjectsOperation.hpp
osg_Fog.hpp
osg_FragmentProgram.hpp
osg_FrameBufferAttachment.hpp
osg_FrameBufferObject.hpp
osg_FrameStamp.hpp
osg_FrontFace.hpp
osg_GL2Extensions.hpp
osg_GLBeginEndAdapter.hpp
osg_GLBufferObject.hpp
osg_GLBufferObjectManager.hpp
osg_GLBufferObjectSet.hpp
osg_Geode.hpp
osg_Geometry.hpp
osg_GeometryCostEstimator.hpp
osg_GraphicsContext.hpp
osg_GraphicsCostEstimator.hpp
osg_GraphicsOperation.hpp
osg_GraphicsThread.hpp
osg_Group.hpp
osg_HeightField.hpp
osg_Hint.hpp
osg_Image.hpp
osg_ImageSequence.hpp
osg_ImageStream.hpp
osg_IndexArray.hpp
osg_InfinitePlane.hpp
osg_KdTree.hpp
osg_KdTreeBuilder.hpp
osg_LOD.hpp
osg_Light.hpp
osg_LightModel.hpp
osg_LightSource.hpp
osg_LineSegment.hpp
osg_LineStipple.hpp
osg_LineWidth.hpp
osg_LogicOp.hpp
osg_Material.hpp
osg_MatrixTransform.hpp
osg_Matrixd.hpp
osg_Matrixf.hpp
osg_Multisample.hpp
osg_Node.hpp
osg_NodeAcceptOp.hpp
osg_NodeCallback.hpp
osg_NodeTrackerCallback.hpp
osg_NodeVisitor.hpp
osg_NotifyHandler.hpp
osg_Object.hpp
osg_Observer.hpp
osg_ObserverNodePath.hpp
osg_ObserverSet.hpp
osg_OccluderNode.hpp
osg_OcclusionQueryNode.hpp
osg_Operation.hpp
osg_OperationQueue.hpp
osg_OperationThread.hpp
osg_PagedLOD.hpp
osg_PatchParameter.hpp
osg_PixelBufferObject.hpp
osg_PixelDataBufferObject.hpp
osg_PixelStorageModes.hpp
osg_Plane.hpp
osg_Point.hpp
osg_PointSprite.hpp
osg_PolygonMode.hpp
osg_PolygonOffset.hpp
osg_PolygonStipple.hpp
osg_Polytope.hpp
osg_PositionAttitudeTransform.hpp
osg_PrimitiveFunctor.hpp
osg_PrimitiveIndexFunctor.hpp
osg_PrimitiveRestartIndex.hpp
osg_PrimitiveSet.hpp
osg_Program.hpp
osg_ProgramCostEstimator.hpp
osg_Projection.hpp
osg_ProxyNode.hpp
osg_Quat.hpp
osg_QueryGeometry.hpp
osg_RefBlock.hpp
osg_RefBlockCount.hpp
osg_RefMatrixd.hpp
osg_RefMatrixf.hpp
osg_Referenced.hpp
osg_ReleaseContext_Block_MakeCurrentOperation.hpp
osg_RenderBuffer.hpp
osg_RenderInfo.hpp
osg_RunOperations.hpp
osg_SampleMaski.hpp
osg_Scissor.hpp
osg_Script.hpp
osg_ScriptCallback.hpp
osg_ScriptEngine.hpp
osg_Sequence.hpp
osg_ShadeModel.hpp
osg_Shader.hpp
osg_ShaderAttribute.hpp
osg_ShaderBinary.hpp
osg_ShaderComponent.hpp
osg_ShaderComposer.hpp
osg_ShadowVolumeOccluder.hpp
osg_Shape.hpp
osg_ShapeDrawable.hpp
osg_ShapeVisitor.hpp
osg_Sphere.hpp
osg_StandardNotifyHandler.hpp
osg_State.hpp
osg_StateAttribute.hpp
osg_StateAttributeCallback.hpp
osg_StateSet.hpp
osg_Stats.hpp
osg_Stencil.hpp
osg_StencilTwoSided.hpp
osg_SwapBuffersOperation.hpp
osg_Switch.hpp
osg_TessellationHints.hpp
osg_TestResult.hpp
osg_TexEnv.hpp
osg_TexEnvCombine.hpp
osg_TexEnvFilter.hpp
osg_TexGen.hpp
osg_TexGenNode.hpp
osg_TexMat.hpp
osg_Texture.hpp
osg_Texture1D.hpp
osg_Texture2D.hpp
osg_Texture2DArray.hpp
osg_Texture2DMultisample.hpp
osg_Texture3D.hpp
osg_TextureBuffer.hpp
osg_TextureCostEstimator.hpp
osg_TextureCubeMap.hpp
osg_TextureRectangle.hpp
osg_Timer.hpp
osg_TransferFunction.hpp
osg_TransferFunction1D.hpp
osg_Transform.hpp
osg_TransformFeedbackBufferBinding.hpp
osg_TriangleMesh.hpp
osg_Uniform.hpp
osg_UniformBufferBinding.hpp
osg_UniformBufferObject.hpp
osg_UserDataContainer.hpp
osg_ValueObject.hpp
osg_ValueVisitor.hpp
osg_Vec2b.hpp
osg_Vec2d.hpp
osg_Vec2f.hpp
osg_Vec2i.hpp
osg_Vec2s.hpp
osg_Vec2ub.hpp
osg_Vec2ui.hpp
osg_Vec2us.hpp
osg_Vec3b.hpp
osg_Vec3d.hpp
osg_Vec3f.hpp
osg_Vec3i.hpp
osg_Vec3s.hpp
osg_Vec3ub.hpp
osg_Vec3ui.hpp
osg_Vec3us.hpp
osg_Vec4b.hpp
osg_Vec4d.hpp
osg_Vec4f.hpp
osg_Vec4i.hpp
osg_Vec4s.hpp
osg_Vec4ub.hpp
osg_Vec4ui.hpp
osg_Vec4us.hpp
osg_VertexAttribAlias.hpp
osg_VertexBufferObject.hpp
osg_VertexProgram.hpp
osg_View.hpp
osg_Viewport.hpp
#osg_WinDebugNotifyHandler.hpp
)
	INCLUDE_DIRECTORIES("../../../../MetaInterfaceLib")
include_directories(
${CMAKE_CURRENT_BINARY_DIR}
"${CMAKE_CURRENT_BINARY_DIR}/include"
)


SET(LIBRARY_OUTPUT_PATH ${CMAKE_HOME_DIRECTORY}/bin/PlugIns)

ADD_LIBRARY(${PROJECT_NAME} MODULE ${SOURCES_CPP})
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
MetaLibraryLib
${Boost_LIBRARIES}
)
SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES PROJECT_LABEL "Module CPPContext_osg"  ) 
#COMPILE_FLAGS -std=c++11
